# we-want-ics

./: .gitignore  README.md  celcat_to_ics.py  gen_cal.sh  pyproject.toml  quicklog.py
celcat_to_ics/: __init__.py  celcat_to_ics.py  quicklog.py
samples/: g220501.xml  g241496.xml  g241638.xml  g241675.xml  g241742.xml  g254186.xml  g254187.xml  g254189.xml  g254190.xml  gen_cal.sh
