[tool.poetry]
name = "celcat_to_ics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
icalendar = "^4.0"
lxml = "^4.3"
colorama = "^0.4.1"


[tool.poetry.dev-dependencies]
autohooks = "^1.1"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
autohooks-plugin-black = "^1.1"


[tool.poetry.scripts]
celcat_to_ics = "celcat_to_ics:main"

[tool.autohooks]
pre-commit = ["autohooks.plugins.black"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

